[tool.poetry]
name = "pydht"
version = "0.1.0"
description = "Learning 2021-highload-dht in 2022"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
types-docopt = "^0.6.9"
pyinstrument = "^4.1.1"
pre-commit = "^2.19.0"
mypy = "^0.950"

[tool.poetry.scripts]
pydht = "pydht.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
